Añadiendo búsqueda por tokens en el formulario de creación de solicitud